feat: starting changes for set of webpack

--- a/src/index.html
+++ b/src/index.html
@@ -24,33 +24,29 @@
                 <div id="main-screen">
                     <div class="files-grid">
                         <div class="miniature">
-                            <img src="sorted/anima/bests/best_59.jpg" class="miniature_img" />
+                            <img src="sorted/animal/kitty/771000.jpg" class="miniature_img" />
                         </div>
                         <div class="miniature">
-                            <img src="sorted/avatars/avatar-0001.GIF" class="miniature_img" />
+                            <img src="sorted/bird/008176B.JPG" class="miniature_img" />
                         </div>
                         <div class="miniature">
-                            <img src="sorted/draw/fon/wp_031.jpg" class="miniature_img" />
+                            <img src="sorted/insectus/nature_insect_0001.jpg" class="miniature_img" />
                         </div>
                         <div class="miniature">
-                            <img src="sorted/football/csk_001.ico" class="miniature_img" />
+                            <img src="sorted/mashroom/56.jpg" class="miniature_img" />
                         </div>
                         <div class="miniature">
-                            <img src="sorted/kino/kino_088.jpg" class="miniature_img" />
+                            <img src="sorted/plant/flower/single/flower_single_0001.jpg" class="miniature_img" />
                         </div>
                         <div class="miniature">
-                            <img src="sorted/mult/fun/funtoonz_014.gif" class="miniature_img" />
+                            <img src="sorted/reptile/36 (2).jpg" class="miniature_img" />
                         </div>
                         <div class="miniature">
-                            <img src="sorted/multibreast/draw_mb/archa_drednout/archa014.jpg" class="miniature_img" />
-                        </div>
-                        <div class="miniature">
-                            <img src="sorted/tatoo/tatoo_strong_007.gif" class="miniature_img" />
+                            <img src="sorted\water\fish\nature_fish_0055_wallpaper.jpg" class="miniature_img" />
                         </div>
                     </div> 
                 </div>
-            </div>
-            
+            </div> 
         </div>
     </body>
 </html>
